# DB-Sample-Collection

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
sample/dynamodb/: bulk_incert.py  bulk_incert_full_data.py  bulk_incert_full_data_float1.py  bulk_incert_full_data_float2.py  config.toml  create_json_file.py  create_tbl_csv.py  dash_dynamodb_range_dt_pick_multi_btn.py  get_all_items.py  get_items.py  get_items_float.py  get_table_lists.py  get_tbl_data.py  get_tbl_data_to_csv.py  get_tbl_data_to_sort_csv.py  incert_data_json.py  request_api.py
sample/dynamodb/incert_files/: data.csv  test_data.json
sample/mariadb/: config.toml  dash_mariadb.py  dash_mariadb_range_dt_pick_multi_btn.py  dash_mariadb_range_dtt_dt_pick_multi_btn.py  data.csv  mariadb_bulk_incert.py  mariadb_incert.py  setup.md
sample/mongodb/: config.toml  dash_mngdb_df_multi_btn_y2select_dbc.py  dash_mngdb_multi_btn_y2select.py  dash_mngdb_multi_btn_y2select_dbc.py  mariadb_incert.py  mongodb_incert.py
