[tool.poetry]
name = "db-sample-collection"
version = "0.1.0"
description = "Repository for collecting and maintaining database-related examples and samples"
authors = ["7rikaz_h785 <7rikaz.h785.stat2ltas41lcijad@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
pymysql = "^1.1.0"
pymongo = "^4.5.0"
boto3 = "^1.28.63"
dash = "^2.14.0"
tomlkit = "^0.12.1"
pandas = "^2.1.1"
dash-bootstrap-components = "^1.5.0"
urllib3 = "<2"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
ruff = "^0.0.292"
pytest = "^7.4.2"
pre-commit = "^3.5.0"
mypy = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py310']

[tool.ruff]
# Check Rules
select = ["E", "F", "I"]
# Ignore Error
ignore = ["E402","E501"]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Assume Python 3.10.
target-version = "py310"

[tool.mypy]
